# swc-plugin-jsx-css-modules

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  helpers.js  package.json
example/: package-lock.json  package.json  rspack.config.js  rspack.config.mjs
example/src/: App.css  App.jsx  index.html
src/: helpers.js  lib.rs  visitor.rs
src/tests/: mod.rs
