[package]
name = "swc-plugin-jsx-css-modules"
version = "0.1.0"
edition = "2021"
description = "SWC plugin for using CSS Modules in JSX without explicit imports"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc_core = { version = "5.0.0", features = ["ecma_plugin_transform", "ecma_utils", "ecma_visit", "ecma_ast", "common", "__parser"] }
regex = "1.5"

[dev-dependencies]
testing = "0.33.3"
swc_ecma_parser = "0.141.26"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
